edité el index y creé la pagina para abrir una cuenta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,163 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main class="main-container">
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div class="product-info">
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+                <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div>
+                    <p>$120.00</p>
+                    <p>$120.00</p>
+                </div>
+                <figure>
+                    <img src="./iconos/bt_add_to_cart.svg" alt="">
+                </figure>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
