--- a/index.html
+++ b/index.html
@@ -13,156 +13,224 @@
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
                 <div class="product-info">
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
+
         <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
             </div>
         </div>
-                <div class="cards-container">
+
+        <div class="cards-container">
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div>
-                    <p>$120.00</p>
-                    <p>$120.00</p>
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
                 </div>
-                <figure>
-                    <img src="./iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+            </div>
+        </div>
+
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120.00</p>
+                        <p>bike</p>
+                    </div>
+                    <figure>
+                        <img src="./iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
             </div>
         </div>
     </main>
