Agregué comentarios a los archivos html y css de las páginas de carrito_de_compras, mi_orden, nav_var e index

--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +8,28 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Contenedor padre de todos los elementos-->
     <aside class="product-detail">
-        <div class="title-container">
+      <!--Contenedor del titulo-->
+      <div class="title-container">
+        <!--ícono de "volver-->
           <img src="./iconos/flechita.svg" alt="arrow">
           <p class="title">My order</p>
         </div>
-    
-        <div class="my-order-content">
-          <div class="shopping-cart">
-            <figure>
-              <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=650&amp;w=940" alt="bike">
-            </figure>
-            <p>Bike</p>
-            <p>$30,00</p>
-            <img src="./iconos/icon_close.png" alt="close">
-          </div>
+      <!--Contenedor padre de los pedidos-->
+      <div class="my-order-content">
+        <!--Contenedor de los pedidos individualmente-->
+        <div class="shopping-cart">
+          <!--imagen de la bicicleta-->
+          <figure>
+            <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=650&amp;w=940" alt="bike">
+          </figure>
+          <!--Detalles del producto-->
+          <p>Bike</p>
+          <p>$30,00</p>
+          <!--ícono para eliminar el producto de la lista-->
+          <img src="./iconos/icon_close.png" alt="close">
+        </div>
     
           <div class="shopping-cart">
             <figure>
