--- a/index.html
+++ b/index.html
@@ -8,231 +8,223 @@
     <title>Inicio</title>
 </head>
 <body>
+    <!--Contenedor principal para posicionar los elementos-->
     <main class="main-container">
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
+        
+        <!--Contenedor para las tarjetas-->
+            <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
+                <div class="product-info">
+                        <!--Contenedor para el precio y el nombre del producto-->
+                        <div>
+                            <p>$120.00</p>
+                            <p>bike</p>
+                        </div>
+                        <!--Contenedor para la imagen del carrito :)-->
+                        <figure>
+                            <img src="./iconos/bt_add_to_cart.svg" alt="">
+                        </figure>
+                    </div>
+            </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
+                    <!--Imagen principal del contenedor (bicicleta)-->
+                    <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                    <!--Contenedor padre de la información del producto y la imagen-->
+                    <div class="product-info">
+                        <!--Contenedor para el precio y el nombre del producto-->
+                        <div>
+                            <p>$120.00</p>
+                            <p>bike</p>
+                        </div>
+                        <!--Contenedor para la imagen del carrito :)-->
+                        <figure>
+                            <img src="./iconos/bt_add_to_cart.svg" alt="">
+                        </figure>
                     </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                        <!--Contenedor padre de la información del producto y la imagen-->
+                        <div class="product-info">
+                            <!--Contenedor para el precio y el nombre del producto-->
+                            <div>
+                                <p>$120.00</p>
+                                <p>bike</p>
+                            </div>
+                            <!--Contenedor para la imagen del carrito :)-->
+                            <figure>
+                                <img src="./iconos/bt_add_to_cart.svg" alt="">
+                            </figure>
+                        </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                        <!--Imagen principal del contenedor (bicicleta)-->
+                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                        <!--Contenedor padre de la información del producto y la imagen-->
+                        <div class="product-info">
+                            <!--Contenedor para el precio y el nombre del producto-->
+                            <div>
+                                <p>$120.00</p>
+                                <p>bike</p>
+                            </div>
+                            <!--Contenedor para la imagen del carrito :)-->
+                            <figure>
+                                <img src="./iconos/bt_add_to_cart.svg" alt="">
+                            </figure>
+                        </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                        <!--Imagen principal del contenedor (bicicleta)-->
+                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                        <!--Contenedor padre de la información del producto y la imagen-->
+                        <div class="product-info">
+                            <!--Contenedor para el precio y el nombre del producto-->
+                            <div>
+                                <p>$120.00</p>
+                                <p>bike</p>
+                            </div>
+                            <!--Contenedor para la imagen del carrito :)-->
+                            <figure>
+                                <img src="./iconos/bt_add_to_cart.svg" alt="">
+                            </figure>
+                        </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+        <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+            <!--Contenedor para las tarjetas-->
             <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                        <!--Imagen principal del contenedor (bicicleta)-->
+                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                        <!--Contenedor padre de la información del producto y la imagen-->
+                        <div class="product-info">
+                            <!--Contenedor para el precio y el nombre del producto-->
+                            <div>
+                                <p>$120.00</p>
+                                <p>bike</p>
+                            </div>
+                            <!--Contenedor para la imagen del carrito :)-->
+                            <figure>
+                                <img src="./iconos/bt_add_to_cart.svg" alt="">
+                            </figure>
+                        </div>
             </div>
-        </div>
 
-        <div class="cards-container">
+            <!--Contenedor para las tarjetas-->
             <div class="product-card">
+                <!--Imagen principal del contenedor (bicicleta)-->
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
+                <!--Contenedor padre de la información del producto y la imagen-->
                 <div class="product-info">
+                    <!--Contenedor para el precio y el nombre del producto-->
                     <div>
                         <p>$120.00</p>
                         <p>bike</p>
                     </div>
+                    <!--Contenedor para la imagen del carrito :)-->
                     <figure>
                         <img src="./iconos/bt_add_to_cart.svg" alt="">
                     </figure>
                 </div>
             </div>
-        </div>
-
-        <div class="cards-container">
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-        </div>
-
-        <div class="cards-container">
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-        </div>
-
-        <div class="cards-container">
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-        </div>
-
-        <div class="cards-container">
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="product-img">
-                <div class="product-info">
-                    <div>
-                        <p>$120.00</p>
-                        <p>bike</p>
-                    </div>
-                    <figure>
-                        <img src="./iconos/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-        </div>
     </main>
 </body>
 </html>
