--- a/nav_var.html
+++ b/nav_var.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <nav>
+        <!--Logo de menú (solo será visible en mobile)-->
         <img src="./iconos/icon_menu.svg" alt="menu" class="menu">
+        <!--Contenedor de la parte izquierda del navbar-->
         <div class="navbar-left">
+            <!--Logo de yardsale-->
             <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <!--Lista de secciones (solo visible en desktop)-->
             <ul>
                 <li><a href="">Todo</a></li>
                 <li><a href="">Ropa</a></li>
@@ -21,10 +25,14 @@
                 <li><a href="">Otros</a></li>
             </ul>
         </div>
+        <!--Contenedor de la parte derecha del navbar-->
         <div class="navbar-right">
             <ul>
+                <!--Correo electrónico del usuario-->
                 <li class="navbar-email">egrodriguez2001@gmail.com</li>
+                <!--Acceder al carrito de compras-->
                 <li class="navbar-shopping-cart">
+                    <!--imagen del carrito-->
                     <img src="./iconos/icon_shopping_cart.svg" alt="">
                     <div>2</div>
                 </li>
